...
                               .font(.title)
                               .padding(.all)
                            .foregroundColor(.black)
                }
              
                NavigationLink(destination:ExercisesListView()) {
                    Text("List of Exercises")
                        .fontWeight(.bold)
                        .frame(minWidth: 0, maxWidth: 300)
                        .padding()
                        .foregroundColor(.black)
                        .font(.largeTitle)
                        .clipShape(Rectangle())
...
                        try! Auth.auth().signOut()
                        UserDefaults.standard.set(false, forKey: "status")
                        NotificationCenter.default.post(name: NSNotification.Name("status"), object: nil)
                        
                    }) {
                        NavigationLink(destination:LoginRegistrationView(show: $show)){
                        Text("Log out")
                            .foregroundColor(/*@START_MENU_TOKEN@*/.blue/*@END_MENU_TOKEN@*/)
                            .padding(.vertical)
                            .frame(width: UIScreen.main.bounds.width - 100)
                    }
                    }
                    .background(Color("Color"))
...
