...
                .cornerRadius(10)
                .font(.title)
            
            HStack{
               
            
            TextField("Search ...", text: $searchExercise)
                          .padding(7)
                          .padding(.horizontal, 25)
                          .background(Color(.systemGray6))
                          .cornerRadius(8)
                          .padding(.horizontal, 10)
                        
...
